# adsb-radar

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  landmarks.csv  pyproject.toml  setup-sender.sh  setup.sh
.github/workflows/: ci.yml
docker/: node-reticulum.conf  sender-entrypoint.sh  transport-entrypoint.sh
examples/: scratch_encoding.py
src/adsb_radar/: alerts.py  proto.py  receiver.conf.example  receiver.py  sender.py
tests/: test_backoff.py  test_connect_lock.py
